src/CoffeeTalk.AppHost/aspirate-output/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspire-dashboard
  labels:
    app: aspire-dashboard
    tags.datadoghq.com/env: dev
    tags.datadoghq.com/service: roast
    tags.datadoghq.com/team: roast
    tags.datadoghq.com/version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspire-dashboard
  template:
    metadata:
      labels:
        app: aspire-dashboard
        tags.datadoghq.com/env: dev
        tags.datadoghq.com/service: roast
        tags.datadoghq.com/team: roast
        tags.datadoghq.com/version: 1.0.0
    spec:
      terminationGracePeriodSeconds: 30
      automountServiceAccountToken: false
      containers:
        - name: aspire-dashboard
          image: mcr.microsoft.com/dotnet/aspire-dashboard:9.0
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              memory: "512Mi"
          ports:
            - name: dashboard-ui
              containerPort: 18888
            - name: otlp
              containerPort: 18889
---
apiVersion: v1
kind: Service
metadata:
  name: aspire-dashboard
  labels:
    tags.datadoghq.com/env: dev
    tags.datadoghq.com/service: roast
    tags.datadoghq.com/team: roast
    tags.datadoghq.com/version: 1.0.0
spec:
  selector:
    app: aspire-dashboard
  ports:
    - name: dashboard-ui
      protocol: TCP
      port: 18888
      targetPort: 18888
    - name: otlp
      protocol: TCP
      port: 18889
      targetPort: 18889
  type: ClusterIP
