src/CoffeeTalk.AppHost/aspirate-output/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  labels:
    lichtblick.de/env: dev
    lichtblick.de/team: roast
    lichtblick/appdomain: roast
  name: roast
spec:
  ingressClassName: nginx
  rules:
  - host: roast.lichtblick-devapps.de
    http:
      paths:
      - backend:
          service:
            name: coffeetalk-api
            port:
              number: 8080
        path: /api
        pathType: ImplementationSpecific
      - backend:
          service:
            name: coffeetalk-web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - roast.lichtblick-devapps.de
    secretName: roast-tls
